--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   smooth_page_indicator: ^2.0.1
   cloud_firestore: ^6.1.0
   fl_chart: ^0.69.0
+  image_picker: ^1.0.7
+  path_provider: ^2.1.2
 
 
 dev_dependencies:
